--- a/src/Components/CampsiteDetails/CampsiteDetails.css
+++ b/src/Components/CampsiteDetails/CampsiteDetails.css
@@ -1,3 +1,8 @@
+.campsite-details {
+  padding: 3%;
+  padding-top: 0px;
+}
+
 .activities-section {
   text-align: left;
 }
@@ -5,4 +10,12 @@
 .campsite-activities {
   overflow: auto;
   max-height: 150px;
+}
+
+.image {
+  height: 200px;
+}
+
+.image:hover {
+  transform: scale(1.5)
 }
