--- a/src/Components/CampsiteCard/CampsiteCard.css
+++ b/src/Components/CampsiteCard/CampsiteCard.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   justify-content: start;
-  /* padding: 4%; */
   height: 250px;
   width: 100%;
   border-radius: 5px;
@@ -28,3 +27,6 @@
   margin: 0;
 }
 
+.rv-info {
+  text-align: left;
+}
