--- a/src/Components/CampsiteDetails/CampsiteDetails.css
+++ b/src/Components/CampsiteDetails/CampsiteDetails.css
@@ -1,4 +1,6 @@
 .campsite-details {
+  display: flex;
+  flex-direction: column;
   padding: 3%;
   padding-top: 0px;
 }
@@ -17,5 +19,9 @@
 }
 
 .image:hover {
-  transform: scale(1.5)
+  transform: scale(1.5);
+}
+
+.rv-info {
+  width: 40%;
 }
