--- a/src/Components/PhotoGallery/PhotoGallery.css
+++ b/src/Components/PhotoGallery/PhotoGallery.css
@@ -1,3 +1,21 @@
 .details-photo {
   width: 75%
 }
+
+@media screen and (max-width: 34.375em) {
+  .details-photo {
+    width: 90%
+  }
+}
+
+@media screen and (min-width: 60em) {
+  .details-photo {
+    width: 70%
+  }
+}
+
+@media screen and (min-width: 65em) {
+  .details-photo {
+    width: 50%
+  }
+}
