refactor: Update CSS that was missing from merge conflict

--- a/src/Components/CampsiteCard/CampsiteCard.css
+++ b/src/Components/CampsiteCard/CampsiteCard.css
@@ -43,3 +43,9 @@
   border-radius: 5px;
   background-color:#446148;
 }
+
+@media screen and (max-width: 34.375em) {
+  .campsite-name {
+    font-size: large;
+  }
+}
