--- a/src/Components/PhotoGallery/PhotoGallery.css
+++ b/src/Components/PhotoGallery/PhotoGallery.css
@@ -1,5 +1,5 @@
 .details-photo {
-  width: 75%
+  width: 70%
 }
 
 @media screen and (max-width: 34.375em) {
@@ -8,13 +8,13 @@
   }
 }
 
-@media screen and (min-width: 60em) {
+@media screen and (min-width: 60em) and (max-width: 83em) {
   .details-photo {
     width: 70%
   }
 }
 
-@media screen and (min-width: 65em) {
+@media screen and (max-width: 83em) {
   .details-photo {
     width: 50%
   }
