feat: Update css styles

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,5 +1,5 @@
 .App, html {
-  background-color: #fbfbfa;
+  background-color: #e2f7f4;
   text-align: center;
   min-height: 100vh;
   height: 100%;
