--- a/src/Components/CampsiteCard/CampsiteCard.css
+++ b/src/Components/CampsiteCard/CampsiteCard.css
@@ -8,8 +8,9 @@
   margin: 5px;
   color: black;
   text-align: center;
-  background-color: #eeeacc;
+  background-color: #9fcf9a;
   position: relative;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .campsite-img {
@@ -21,6 +22,7 @@
 
 .campsite-card:hover {
   cursor: pointer;
+  transform: scale(1.1);
 }
 
 .campsite-name{
@@ -42,5 +44,11 @@
   cursor: pointer;
   border: 1.5px solid rgb(255, 255, 255);
   border-radius: 5px;
-  background-color:#446148;
+  background-color:#527657;
+}
+
+.favorite-button:hover {
+  transform: scale(1.1);
+  background-color:#7ea57a;
+
 }
