--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   height: 9em;
-  background-color:rgb(31, 72, 28);
+  background-color:#85C67E;
   color: white;
 }
 
