--- a/src/Components/CampsiteCard/CampsiteCard.css
+++ b/src/Components/CampsiteCard/CampsiteCard.css
@@ -6,9 +6,9 @@
   width: 100%;
   border-radius: 5px;
   margin: 5px;
-  color: black;
+  color: whitesmoke;
   text-align: center;
-  background-color: #9fcf9a;
+  background-color: #429070;
   position: relative;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
