--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,16 +1,45 @@
 .header {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   height: 9em;
-  background-color:#85C67E;
+  background-color:#398062;
   color: white;
+  align-items: center;
 }
 
 a {
   color: white;
   text-decoration: none;
 }
+
+.logo {
+  height: 10em;
+  padding-top: 0.5em;
+}
+
+.logo-title {
+  height: 9em;
+}
+
+.logo-title:hover {
+  animation: wiggle 0.5s infinite;
+}
+
+@keyframes wiggle {
+  0% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(2deg);
+  }
+  75% {
+    transform: rotate(-2deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
 
 @media screen and (max-width: 34.375em) {
   .header {
